--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "query-string": "^6.11.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1"
+    "react-wechat-api": "^0.1.2",
+    "slick-carousel": "^1.8.1",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "scripts": {
     "start": "react-scripts start",
